# meta_hack

./: .dockerignore  .gitignore  README.md  TEN_OUT_OF_TEN_IDEAS.md  app.py  demo_run.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  pytest.ini  requirements.txt  tasks.py
server/: app.py
tests/: test_env.py
