[project]
name = "ai-code-review-openenv"
version = "0.1.0"
description = "OpenEnv-compatible AI code review and bug reasoning environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "httpx==0.28.1",
  "openai>=2.7.2,<3",
  "openenv-core>=0.2.0",
  "pydantic==2.11.3",
  "pyyaml==6.0.2",
  "uvicorn==0.34.0",
]

[project.scripts]
server = "uvicorn:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
